cmake_minimum_required (VERSION 2.8)

project (Avions)

set(SRC_EXT "cpp")

file( GLOB_RECURSE
source_files
src/*.${SRC_EXT}
)

add_executable(avions ${source_files})

#FIND_PACKAGE(OSG 3.2.1 REQUIRED osgGA osgViewer osgDB)
FIND_PACKAGE(OpenSceneGraph 3.2.1 REQUIRED osgGA osgViewer osgDB)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(include)

MESSAGE("OSG_INCLUDE_DIRS = ${OSG_INCLUDE_DIRS}")
MESSAGE("OSG_INCLUDE_DIR = ${OSG_INCLUDE_DIR}")

TARGET_LINK_LIBRARIES(avions ${OPENSCENEGRAPH_LIBRARIES})
#TARGET_LINK_LIBRARIES(avions ${OPENSCENEGRAPH_LIBRARIES})
MESSAGE("OPENSCENEGRAPH_LIBRARIES = ${OPENSCENEGRAPH_LIBRARIES}")
MESSAGE("OSG_LIBRARY = ${OSG_LIBRARY}")
MESSAGE("OSGGA_LIBRARY = ${OSGGA_LIBRARY}")